check all color

--- a/views/admin/list-banner.ejs
+++ b/views/admin/list-banner.ejs
@@ -1,8 +1,8 @@
-<section class="main-wrap">
-  <div class="card-body">
-    <div class="table-responsive">
+<section class="main-wrap ">
+  <div class="card-body " style="background-color: #ffffff">
+    <div class="table-responsive ">
       <div class="table-responsive">
-        <table class="table align-middle table-nowrap mb-0">
+        <table class="table align-middle table-nowrap mb-0 ">
           <% if(response.length==0){%>
           <div class="d-flex justify-content-center">
             <img src="/assets/imgs/banners/empty-cart-1546860808" alt="" />
