--- a/views/admin/order-details.ejs
+++ b/views/admin/order-details.ejs
@@ -1,4 +1,4 @@
-<section class="main-wrap">
+<section class="main-wrap" style="background-color: rgb(255, 255, 255);">
   <div class="container">
     <div class="content-header">
       <div>
