--- a/views/admin/add-banner.ejs
+++ b/views/admin/add-banner.ejs
@@ -1,5 +1,5 @@
 <section class="main-wrap">
-  <div class="container d-flex justify-content-center">
+  <div class="container d-flex justify-content-center" style="background-color: rgb(255, 255, 255);">
     <div class="row w-75 mt-5">
       <div class="col-md-12">
         <h2 class="text-center">Add Banner</h2>
