--- a/views/admin/add-category.ejs
+++ b/views/admin/add-category.ejs
@@ -1,5 +1,5 @@
 <section class="main-wrap">
-  <div class="container d-flex justify-content-center">
+  <div class="container d-flex justify-content-center" style="background-color: rgb(255, 255, 255);">
     <div class="row w-75 mt-5">
       <div class="col-md-12">
         <h2 class="text-center">Add Category</h2>
@@ -41,7 +41,7 @@
 </section>
 <!-- Table section -->
 <section class="main-wrap">
-  <div class="card-body">
+  <div class="card-body" style="background-color: rgb(255, 255, 255);">
     <div class="row w-100 mt-5 mx-auto">
       <div class="table-responsive">
         <div class="table-responsive">
