--- a/views/admin/admin-dashboard.ejs
+++ b/views/admin/admin-dashboard.ejs
@@ -1,5 +1,5 @@
-<main class="main-wrap">
-  <section class="content-main">
+<main class="main-wrap" >
+  <section class="content-main" style="background-color: rgb(255, 255, 255);">
     <div class="content-header">
       <div>
         <h2 class="content-title card-title">Dashboard</h2>
@@ -7,7 +7,7 @@
       </div>
       <div>
         <a href="/admin/sales-report" class="btn btn-primary bg-dark"
-          ><i class="text-muted material-icons md-post_add "></i>Create report</a
+          ><i class="text-muted material-icons md-post_add bg-dark"></i>Create report</a
         >
       </div>
     </div>
@@ -99,41 +99,6 @@
           </div>
 </section>
            
-        <!-- <div class="card mb-4">
-          <article class="card-body">
-            <h5 class="card-title">Marketing Chanel</h5>
-            <span class="text-muted font-xs">Facebook</span>
-            <div class="progress mb-3">
-              <div class="progress-bar" role="progressbar" style="width: 15%">
-                15%
-              </div>
-            </div>
-            <span class="text-muted font-xs">Instagram</span>
-            <div class="progress mb-3">
-              <div class="progress-bar" role="progressbar" style="width: 65%">
-                65%
-              </div>
-            </div>
-            <span class="text-muted font-xs">Google</span>
-            <div class="progress mb-3">
-              <div class="progress-bar" role="progressbar" style="width: 51%">
-                51%
-              </div>
-            </div>
-            <span class="text-muted font-xs">Twitter</span>
-            <div class="progress mb-3">
-              <div class="progress-bar" role="progressbar" style="width: 80%">
-                80%
-              </div>
-            </div>
-            <span class="text-muted font-xs">Other</span>
-            <div class="progress mb-3">
-              <div class="progress-bar" role="progressbar" style="width: 80%">
-                80%
-              </div>
-            </div>
-          </article>
-        </div> -->
       </div>
     </div>
     
