--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="background-color: rgb(255, 255, 255);">
   <div class="row">
     <div class="col-md-6 offset-md-3">
       <div class="card my-5">
