--- a/views/partials/user-footer.ejs
+++ b/views/partials/user-footer.ejs
@@ -1,123 +1,58 @@
 <footer class="main">
-    <section class="section-padding footer-mid">
-      <div class="container pt-15 pb-20">
-        <div class="row">
-          <div class="col-lg-4 col-md-6">
-            <div class="widget-about font-md mb-md-5 mb-lg-0">
-              <div class="logo logo-width-1 wow fadeIn animated">
-                <!-- <a href="index.html"
-                  ><img src="assets/imgs/theme/logo.svg" alt="logo"
-                /></a> -->
-              </div>
-              <div class="col-lg-4 col-md-6">
-                <div class="widget-about font-md mb-md-5 mb-lg-0">
-                  <div class="logo logo-width-1 wow fadeIn animated">
-                    <a href="/"><img src="https://images.cooltext.com/5651101.png" alt=""></a>
-                  </div>
-                  <h5 class="mt-20 mb-10 fw-600 text-grey-4 wow fadeIn animated">
-                    Contact
-                  </h5>
-                  <p class="wow fadeIn animated">
-                    <strong>Address: </strong>Trivandrum,Kerala
-                  </p>
-                  <p class="wow fadeIn animated">
-                    <strong>Phone:</strong>+91 8592948232
-                  </p>
-                  <p class="wow fadeIn animated">
-                    <strong>Hours: </strong>10:00 - 18:00, Mon - Sat
-                  </p>
-                </div>
-              </div>
-              </h5> 
-              <div
-                class="mobile-social-icon wow fadeIn animated mb-sm-5 mb-md-0"
-              >
-                <!-- <a href="#"
-                  ><img src="assets/imgs/theme/icons/icon-facebook.svg" alt=""
-                /></a>
-                <a href="#"
-                  ><img src="assets/imgs/theme/icons/icon-twitter.svg" alt=""
-                /></a>
-                <a href="#"
-                  ><img src="assets/imgs/theme/icons/icon-instagram.svg" alt=""
-                /></a>
-                <a href="#"
-                  ><img src="assets/imgs/theme/icons/icon-pinterest.svg" alt=""
-                /></a>
-                <a href="#"
-                  ><img src="assets/imgs/theme/icons/icon-youtube.svg" alt=""
-                /></a> -->
+  <section class="section-padding footer-mid">
+    <div class="container pt-15 pb-20">
+      <div class="row justify-content-center">
+        <div class="col-lg-4 col-md-6">
+          <div class="widget-about font-md mb-md-5 mb-lg-0">
+            <div class="logo logo-width-1 wow fadeIn animated">
+              <a href="/"><img src="https://images.cooltext.com/5651101.png" width="100px" height="50px" alt=""></a>
+            </div>
+            <div class="col-lg-4 col-md-6">
+              <div class="widget-about font-md mb-md-5 mb-lg-0">
+                <h5 class="mt-20 mb-10 fw-600 text-grey-4 wow fadeIn animated">Contact</h5>
+                <p class="wow fadeIn animated"><strong>Address: </strong>Trivandrum, Kerala</p>
+                <p class="wow fadeIn animated"><strong>Phone: </strong>+91 8592948232</p>
+                <p class="wow fadeIn animated"><strong>Hours: </strong>10:00 - 18:00, Mon - Sat</p>
               </div>
             </div>
+            <div class="mobile-social-icon wow fadeIn animated mb-sm-5 mb-md-0"></div>
           </div>
-          <div class="col-lg-2 col-md-3">
-            <h5 class="widget-title wow fadeIn animated">About</h5>
-            <ul class="footer-list wow fadeIn animated mb-sm-5 mb-md-0">
-              <li><a href="#">About Us</a></li>
-              <li><a href="#">Delivery Information</a></li>
-              <li><a href="#">Privacy Policy</a></li>
-              <li><a href="#">Terms &amp; Conditions</a></li>
-              <li><a href="#">Contact Us</a></li>
-              <li><a href="#">Support Center</a></li>
-            </ul>
-          </div>
-          <div class="col-lg-2 col-md-3">
-            <h5 class="widget-title wow fadeIn animated">My Account</h5>
-            <ul class="footer-list wow fadeIn animated">
-              <li><a href="/logout">Log out</a></li>
-              <li><a href="/cart">View Cart</a></li>
-              <li><a href="#">My Wishlist</a></li>
-              <li><a href="/orders">Track My Order</a></li>
-              <li><a href="#">Help</a></li>
-              <li><a href="/ordres">Order</a></li>
-            </ul>
-          </div>
-          <div class="col-lg-4">
-            <!-- <h5 class="widget-title wow fadeIn animated">Install App</h5>
-            <div class="row">
-              <div class="col-md-8 col-lg-12">
-                <p class="wow fadeIn animated">From App Store or Google Play</p>
-                <div class="download-app wow fadeIn animated">
-                  <a href="#" class="hover-up mb-sm-4 mb-lg-0"
-                    ><img
-                      class="active"
-                      src="assets/imgs/theme/app-store.jpg"
-                      alt=""
-                  /></a>
-                  <a href="#" class="hover-up"
-                    ><img src="assets/imgs/theme/google-play.jpg" alt=""
-                  /></a>
-                </div>
-              </div> -->
-              <div class="col-md-4 col-lg-12 mt-md-3 mt-lg-0">
-                <p class="mb-20 wow fadeIn animated">
-                  Secured Payment Gateways
-                </p>
-                <img
-                  class="wow fadeIn animated"
-                  src="assets/imgs/theme/payment-method.png"
-                  alt=""
-                />
-              </div>
-            </div>
-          </div>
+        </div>
+        <div class="col-lg-2 col-md-3">
+          <h5 class="widget-title wow fadeIn animated">About</h5>
+          <ul class="footer-list wow fadeIn animated mb-sm-5 mb-md-0">
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Delivery Information</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Terms &amp; Conditions</a></li>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">Support Center</a></li>
+          </ul>
+        </div>
+        <div class="col-lg-2 col-md-3">
+          <h5 class="widget-title wow fadeIn animated">My Account</h5>
+          <ul class="footer-list wow fadeIn animated">
+            <li><a href="/logout">Log out</a></li>
+            <li><a href="/cart">View Cart</a></li>
+            <li><a href="#">My Wishlist</a></li>
+            <li><a href="/orders">Track My Order</a></li>
+            <li><a href="#">Help</a></li>
+            <li><a href="/ordres">Order</a></li>
+          </ul>
         </div>
       </div>
-    </section>
-    <div class="container pb-20 wow fadeIn animated">
-      <div class="row">
-        <div class="col-12 mb-20">
-          <div class="footer-bottom"></div>
-        </div>
-        <div class="col-lg-6">
-          <p class="float-md-left font-sm text-muted mb-0">
-            &copy; 2021, <strong class="text-brand text-dark">TIMES HUB</strong> 
-          </p>
-        </div>
-        <div class="col-lg-6">
-          <p class="text-lg-end text-start font-sm text-muted mb-0">
-            <a href="/" target="_blank"></a>.
-            All rights reserved
+    </div>
+  </section>
+  <div class="container pb-20 wow fadeIn animated">
+    <div class="row justify-content-center">
+      <div class="col-12 mb-20">
+        <div class="footer-bottom"></div>
+      </div>
+      <div class="col-lg-6">
+        <p class="float-md-left font-sm text-muted mb-0">&copy; 2021, <strong class="text-brand text-dark">TIMES HUB</strong></p>
+      </div>
+      <div class="col-lg-6">
+        <p class="text-lg-end text-start font-sm text-muted mb-0"><a href="/" target="_blank"></a>. All rights reserved
           </p>
         </div>
       </div>
