last few edit on views frontend

--- a/views/admin/add-category.ejs
+++ b/views/admin/add-category.ejs
@@ -45,7 +45,7 @@
     <div class="row w-100 mt-5 mx-auto">
       <div class="table-responsive">
         <div class="table-responsive">
-          <table class="table align-middle table-nowrap mb-0" id="productsTable">
+          <table class="table align-middle table-nowrap mb-0 table-bordered" id="productsTable">
             <thead class="table-light">
               <tr>
                 <th class="align-middle" scope="col">No</th>
