--- a/views/admin/view-orders.ejs
+++ b/views/admin/view-orders.ejs
@@ -81,7 +81,7 @@ body {
   <div class="container">
     <div class="row">
       <div class="table-responsive">
-        <table class="table" id="productsTable">
+        <table class="table table-bordered" id="productsTable">
           <thead>
             <tr>
               <!-- <th scope="col">No</th> -->
