--- a/views/admin/view-products.ejs
+++ b/views/admin/view-products.ejs
@@ -1,11 +1,11 @@
 <section class="main-wrap mt-5">
   <div class="container-fluid">
     <a href="/admin/add-product">
-      <button class="btn btn-primary mb-2 bg-dark">Add Products</button>
+      <button class="btn btn-primary mb-2 bg-dark m-3">Add Products</button>
     </a>
     <div class="row flex-column">
       <div class="table-responsive-sm">
-        <table class="table" id="productsTable">
+        <table class="table " id="productsTable">
           <thead>
             <tr>
               <th class="d-none d-sm-table-cell" scope="col">No</th>
