--- a/views/partials/user-footer.ejs
+++ b/views/partials/user-footer.ejs
@@ -34,9 +34,9 @@
           <ul class="footer-list wow fadeIn animated">
             <li><a href="/logout">Log out</a></li>
             <li><a href="/cart">View Cart</a></li>
-            <li><a href="#">My Wishlist</a></li>
+            <li><a href="/wish-list">My Wishlist</a></li>
             <li><a href="/orders">Track My Order</a></li>
-            <li><a href="#">Help</a></li>
+            <li><a href="/profile">Profile</a></li>
             <li><a href="/ordres">Order</a></li>
           </ul>
         </div>
