--- a/views/user/filterProducts.ejs
+++ b/views/user/filterProducts.ejs
@@ -189,7 +189,7 @@
                             ><i class="fi-rs-shopping-bag-add"></i
                           ></button>
                          <%}else{ %>
-                            <p class="text-danger">out-of-stock</p>
+                          <p class="text-danger" style="font-size: 12px;">out-of-stock</p>
                          <% } %>
                      
                         </div>
@@ -327,75 +327,7 @@
         </div>
       </section>
     </main>
-    <footer class="main">
-     
-      <section class="section-padding footer-mid">
-        <div class="container pt-15 pb-20">
-          <div class="row">
-            <div class="col-lg-4 col-md-6">
-              <div class="widget-about font-md mb-md-5 mb-lg-0">
-                <div class="logo logo-width-1 wow fadeIn animated">
-                
-                </div>
-              
-               
-              </div>
-            </div>
-            <div class="col-lg-2 col-md-3">
-              <h5 class="widget-title wow fadeIn animated">About</h5>
-              <ul class="footer-list wow fadeIn animated mb-sm-5 mb-md-0">
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Delivery Information</a></li>
-                <li><a href="#">Privacy Policy</a></li>
-                <li><a href="#">Terms &amp; Conditions</a></li>
-                <li><a href="#">Contact Us</a></li>
-                <li><a href="#">Support Center</a></li>
-              </ul>
-            </div>
-            <div class="col-lg-2 col-md-3">
-              <h5 class="widget-title wow fadeIn animated">My Account</h5>
-              <ul class="footer-list wow fadeIn animated">
-                <!-- <li><a href="#">Sign In</a></li> -->
-                <li><a href="#">View Cart</a></li>
-                <li><a href="#">My Wishlist</a></li>
-                <li><a href="#">Track My Order</a></li>
-                <li><a href="#">Help</a></li>
-                <li><a href="#">Order</a></li>
-              </ul>
-            </div>
-            <div class="col-lg-4">
-              <!-- <h5 class="widget-title wow fadeIn animated">Install App</h5> -->
-              <div class="row">
-               
-                <div class="col-md-4 col-lg-12 mt-md-3 mt-lg-0">
-                  <p class="mb-20 wow fadeIn animated">
-                    Secured Payment Gateways
-                  </p>
-                  <img
-                    class="wow fadeIn animated"
-                    src="assets/imgs/theme/payment-method.png"
-                    alt=""
-                  />
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <div class="container pb-20 wow fadeIn animated">
-        <div class="row">
-          <div class="col-12 mb-20">
-            <div class="footer-bottom"></div>
-          </div>
-          <div class="col-lg-6">
-            <p class="float-md-left font-sm text-muted mb-0">
-              &copy; 2021, <strong class="text-brand">TIMES HUB</strong>
-            </p>
-          </div>
-         
-        </div>
-      </div>
-    </footer>
+    
     <!-- Preloader Start -->
     <div id="preloader-active">
       <div class="preloader d-flex align-items-center justify-content-center">
