--- a/views/user/search.ejs
+++ b/views/user/search.ejs
@@ -267,7 +267,7 @@ margin-top:100px;
                             ><i class="fi-rs-shopping-bag-add"></i
                           ></button>
                          <%}else{ %>
-                            <p class="text-danger">out-of-stock</p>
+                          <p class="text-danger" style="font-size: 12px;">out-of-stock</p>
                          <% } %>
                      
                         </div>
