--- a/views/user/wishlist.ejs
+++ b/views/user/wishlist.ejs
@@ -77,7 +77,7 @@
  }
     </style>
  <% }else { %>
-<main class="main">
+<main class="main-wrap">
     <section class="mt-50 mb-50">
       <div class="container">
         <div class="row">
@@ -86,7 +86,7 @@
               <div class="d-flex justify-content-center">
                
               </div>
-              <table class="table shopping-summery text-center">
+              <table class="table shopping-summery text-center" id="">
                 <thead>
                   <tr class="main-heading">
                     <th scope="col" colspan="2">Product</th>
