--- a/views/admin/view-coupons.ejs
+++ b/views/admin/view-coupons.ejs
@@ -13,7 +13,7 @@
             </div>
             <%} else{%>
             <div class="table-responsive">
-              <table class="table table-striped table-hover align-middle">
+              <table class="table table-striped table-hover align-middle table-bordered">
                 <thead>
                   <tr>
                     <th scope="col">No</th>
