--- a/views/user/shop.ejs
+++ b/views/user/shop.ejs
@@ -80,14 +80,7 @@ margin-top:100px;
 
 
 <section>
-  <!-- <div class="page-header breadcrumb-wrap"> -->
-    <!-- <div class="container">
-      <div class="breadcrumb">
-        <a href="index.html" rel="nofollow">Home</a>
-        <span></span> Shop
-      </div>
-    </div> -->
-  <!-- </div>  -->
+  
   <div class="mobile-header-active mobile-header-wrapper-style">
     <div class="mobile-header-wrapper-inner">
       <div class="mobile-header-top">
@@ -105,7 +98,7 @@ margin-top:100px;
       </div>
       <div class="mobile-header-content-area">
         <div class="mobile-search search-style-3 mobile-header-border">
-          <form action="#">
+          <form action="/search">
             <input type="text" placeholder="Search for items…" />
             <button type="submit"><i class="fi-rs-search"></i></button>
           </form>
@@ -123,48 +116,15 @@ margin-top:100px;
               <li class="menu-item-has-children">
                 <span class="menu-expand"></span><a href="/orders">Orders</a>
               </li>
-            
-
-              <!-- <li class="menu-item-has-children">
-                <span class="menu-expand"></span><a href="#">Language</a>
-                <ul class="dropdown">
-                  <li><a href="#">English</a></li>
-                  <li><a href="#">French</a></li>
-                  <li><a href="#">German</a></li>
-                  <li><a href="#">Spanish</a></li>
-                </ul>
-              </li> -->
+              <li class="menu-item-has-children">
+                <span class="menu-expand"></span><a href="/profile">Profile</a>
+              </li>
             </ul>
           </nav>
           <!-- mobile menu end -->
         </div>
-        <!-- <div class="mobile-header-info-wrap mobile-header-border">
-          <div class="single-mobile-header-info mt-30">
-            <a href="page-contact.html"> Our location </a>
-          </div>
-          <div class="single-mobile-header-info">
-            <a href="page-login-register.html">Log In / Sign Up </a>
-          </div>
-         -->
-        </div>
-        <!-- <div class="mobile-social-icon">
-          <h5 class="mb-15 text-grey-4">Follow Us</h5>
-          <a href="#"
-            ><img src="assets/imgs/theme/icons/icon-facebook.svg" alt=""
-          /></a>
-          <a href="#"
-            ><img src="assets/imgs/theme/icons/icon-twitter.svg" alt=""
-          /></a>
-          <a href="#"
-            ><img src="assets/imgs/theme/icons/icon-instagram.svg" alt=""
-          /></a>
-          <a href="#"
-            ><img src="assets/imgs/theme/icons/icon-pinterest.svg" alt=""
-          /></a>
-          <a href="#"
-            ><img src="assets/imgs/theme/icons/icon-youtube.svg" alt=""
-          /></a>
-        </div> -->
+       
+     
       </div>
     </div>
   </div>
@@ -289,7 +249,7 @@ margin-top:100px;
                   <nav aria-label="Page">
                     <ul class="pagination">
                       <% for(let i=0;i<pages;i++) { %>
-                        <li class="page-item"><a class="page-link bg-dark text-light" href="/shop?page=<%=i+1%>"><%=i+1%></a></li>
+                        <li class="page-item"><a class="page-link bg-dark text-light rounded-circle" href="/shop?page=<%=i+1%>"><%=i+1%></a></li>
                       <% } %>
                     </ul>
                     
