user home page session removed

--- a/views/admin/sort-sales.ejs
+++ b/views/admin/sort-sales.ejs
@@ -54,7 +54,7 @@
              <th scope="col">Delivered Date</th>
            </tr>
          </thead>
-         <tbody style="background-color: cyan;">
+         <tbody style="background-color: rgb(255, 255, 255);">
          
             <% Details.map((data)=>{%>
             <tr>
