last some bugs fixed in coupon and add to cart

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -29,6 +29,7 @@
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <script src="https://unpkg.com/easyinvoice/dist/easyinvoice.min.js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.22/css/jquery.dataTables.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
   </head>
   <body>
     <%- include('partials/user-header') %> 
