--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -264,7 +264,7 @@ margin-top:100px;
          checkTotalInput.value = response?.couponTotal,
          couponNameInput.value = couponName,
          couponDiscountInput.value = response?.discountAmount
-         console.log(couponDiscountInput,';;');
+        //  console.log(couponDiscountInput,';;');
          if(response.err){
            document.getElementById('couponUsedErr').innerHTML = response.err
          } 
