--- a/views/admin/sort-sales.ejs
+++ b/views/admin/sort-sales.ejs
@@ -1,88 +1,73 @@
 <section class="main-wrap">
-    <div class="main_container container">
-        <% if(Details.length==0){%>
-         <div class="d-flex justify-content-center align-items-center">
-           <h2 class="">No Orders Available</h2>
-         </div>
-         <%}else{%>
-            <h1 class="text-dark text-center pt-5">Sales Report</h1>
-         <div class="d-flex justify-content-center m-4">
-             <button type="button" class="btn btn-danger btn_print me-3" onclick="Swal.fire({
+  <div class="main_container container" >
+    <% if(Details.length==0){%>
+    <div class="d-flex justify-content-center align-items-center">
+      <h2 class="">No Orders Available</h2>
+    </div>
+    <%}else{%>
+    <h1 class="text-dark text-center pt-5 ">Sales Report</h1>
+    <img  src="https://images.cooltext.com/5651101.png" alt="">
+    <div class="d-flex justify-content-center flex-wrap mt-4">
+      <button type="button" class="btn btn-danger btn_print mx-3 mb-3" onclick="Swal.fire({
               position: 'center',
               icon: 'success',
               title: 'Download PDF Successfully',
               showConfirmButton: false,
               timer: 1500
-            })"
-                 value="Download as Pdf">Download PDF</button>
-             <button type="button" class="btn btn-danger btn_print me-3"  onclick="Swal.fire({
+            })" value="Download as Pdf">Download PDF</button>
+      <button type="button" class="btn btn-danger btn_print mx-3 mb-3" onclick="Swal.fire({
               position: 'center',
               icon: 'success',
               title: 'Download Excel Successfully',
               showConfirmButton: false,
               timer: 1500
-            })"
-                 value="Export to excel">Download as Excel</button>
-        
-         <div>
-     <!-- <form>
-     <div> <input type="date" name="startdate" id="startdate"></div>
-      
-       <div><input type="date" name="enddate" id="enddate" ></div>
-     </form> -->
-     <form action="/admin/sales-report" method="POST">
-       <div> <input type="date" name="startdate" id="startdate"></div>
-       <div><input type="date" name="enddate" id="enddate"></div>
-       
-     </div> 
-       <div class="ml-3 my-auto"><button class="btn btn-primary " type="submit">submit</button></div>
-        
-        <!-- <input class="ms-1" type="text" name="daterange" value="01/01/2022 - 12/01/2023"/> -->
-     </form>
-        
-         </div>
-         <td><img src="https://images.cooltext.com/5651101.png" alt=""></td>
-         <table class="table table-striped" id="container_content">
-         <thead>
-           <tr>
-             <th scope="col">OrderId</th>
-             <th scope="col">User Name</th>
-             <th scope="col">Item Name</th>
-             <th scope="col">Quantity</th>
-             <th scope="col">Price</th>
-             <th scope="col">Payment Method</th>
-             <th scope="col">Delivered Date</th>
-           </tr>
-         </thead>
-         <tbody style="background-color: rgb(255, 255, 255);">
-         
-            <% Details.map((data)=>{%>
-            <tr>
-                <td><%=data.orders._id%></td>
-                <td><%=shipping[0].shippingAddress[0].Address.fname%></td>
-                
-             <td><%=data.orders.productDetails[0].productName%></td>
-             
-             <td><%=data.orders.productDetails[0].quantity%></td>
-             <td><%=data.orders.productDetails[0].price%></td>
-              <td><%=data.orders.createdAt%></td>
-              <td><%=data.orders.paymentMethod%></td>
-            </tr>
-             <% })%>
-             
-            
-             <h4 class="text-left">Total Earnings: &nbsp; <span class="fw-bold"></span>₹<%=total%> </h4>
-            </tbody>
-       </table>
-     </div>
-     <br>
-     <br>
-     <hr>
-     <hr>
-     <%}%>
-     
-     </div>
-     
+            })" value="Export to excel">Download as Excel</button>
+      <form action="/admin/sales-report" method="POST" class="d-flex align-items-center mb-2 flex-wrap">
+        <div class="mx-3 flex-wrap mt-4">
+          <input type="date" name="startdate" id="startdate" class="form-control">
+        </div>
+        <div class="mx-3 flex-wrap mt-4">
+          <input type="date" name="enddate" id="enddate" class="form-control">
+        </div>
+        <div class="mx-3 flex-wrap mt-4">
+          <button class="btn btn-primary " type="submit">Submit</button>
+        </div>
+      </form>
+    </div>
+    <div class="table-responsive">
+      <table class="table table-striped" id="container_content">
+        <thead>
+          <tr>
+            <th scope="col">OrderId</th>
+            <th scope="col">User Name</th>
+            <th scope="col">Item Name</th>
+            <th scope="col">Quantity</th>
+            <th scope="col">Price</th>
+            <th scope="col">Payment Method</th>
+            <th scope="col">Delivered Date</th>
+          </tr>
+        </thead>
+        <tbody style="background-color: rgb(255, 255, 255);">
+          <% Details.map((data)=>{%>
+          <tr>
+            <td><%=data.orders._id%></td>
+            <td><%=shipping[0].shippingAddress[0].Address.fname%></td>
+            <td><%=data.orders.productDetails[0].productName%></td>
+            <td><%=data.orders.productDetails[0].quantity%></td>
+            <td><%=data.orders.productDetails[0].price%></td>
+            <td><%=data.orders.createdAt%></td>
+            <td><%=data.orders.paymentMethod%></td>
+          </tr>
+          <% })%>
+          <tr>
+            <td colspan="7" class="text-end"><h4 class="text-start">Total Earnings: &nbsp; <span class="fw-bold"></span>₹<%=total%> </h4></td>
+          </tr>
+        </tbody>
+
+      </table>
+    </div>
+    <%}%>
+  </div>
 </section>
 
 <script>
