--- a/views/user/otpNumber.ejs
+++ b/views/user/otpNumber.ejs
@@ -4,7 +4,7 @@
       class="row text-center p-5"
       style="background-color: rgb(255, 255, 255)"
     >
-      <form action="/otpNumber" method="post">
+      <form id="myForm" action="/otpNumber" method="post">
         <div class="form-group">
           <label for="exampleInputEmail1" class="text-dark display-6"
             >Enter Number</label
@@ -13,7 +13,7 @@
           <p style="color: red">Number Not Exist</p>
           <% } %>
           <input
-            type="number"
+            type=""
             placeholder="Enter Your Number here"
             name="number"
             class="form-control bg-white text-center"
@@ -29,3 +29,27 @@
     </div>
   </div>
 </section>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+<script>
+  document.querySelector('#myForm').addEventListener('submit', function(event) {
+    var numberInput = document.querySelector('#number');
+    if (isNaN(numberInput.value)) {
+      event.preventDefault(); // Prevent the form from submitting
+      Toastify({
+  text: "Please Enter Numbers Only",
+  duration: 3000,
+  destination: "https://github.com/apvarun/toastify-js",
+  newWindow: true,
+  close: true,
+  gravity: "center", // `top` or `bottom`
+  position: "center", // `left`, `center` or `right`
+  stopOnFocus: true, // Prevents dismissing of toast on hover
+  style: {
+    background: "linear-gradient(to right, #00b09b, #96c93d)",
+  },
+  onClick: function(){} // Callback after click
+}).showToast();
+    }
+  });
+</script>
+
