--- a/views/user/user.ejs
+++ b/views/user/user.ejs
@@ -239,18 +239,22 @@
                     </div>
                     <% if(data.Quantity>0){ %>
                       <div class="product-action-1 show">
-                        <button
-                        aria-label="Add To Cart"
-                        class="action-btn hover-up"
-                          onclick="addToCart('<%= data._id %>'); Swal.fire({
-                          position: 'center',
-                          icon: 'success',
-                          title: 'Item Added Successfully To Cart',
-                          showConfirmButton: false,
-                          timer: 2000
-                        })"
-                        ><i class="fi-rs-shopping-bag-add"></i
-                      ></button>
+                        <% if(!data.carted){%>
+                          <button aria-label="Add To Cart" class="action-btn hover-up" onclick="addToCart('<%= data._id %>'); Swal.fire({
+                            position: 'center',
+                            icon: 'success',
+                            title: 'Item Added Successfully To Cart',
+                            showConfirmButton: false,
+                            timer: 2000
+                          })">
+                            <i class="fi-rs-shopping-bag-add"></i>
+                          </button>
+                
+                       <% }else{%>
+                        <a href="/cart">
+                       <button aria-label="View Cart"><i class="fa-sharp fa-solid fa-eye" style="color: #000000;"></i></button></a>
+                       <% }%>
+                        
                     </div>
                      <%}else{ %>
                       <div class="product-action-1 show">
