--- a/views/user/viewFull.ejs
+++ b/views/user/viewFull.ejs
@@ -139,22 +139,13 @@
                                         <% if(data.Quantity>0){ %>
 
                                             <div class="product-extra-link2">
-                                                <% if(!data.carted){%>
-                                                    <button aria-label="Add To Cart" class="action-btn hover-up btn btn-sm" onclick="addToCart('<%= data._id %>'); Swal.fire({
-                                                      position: 'center',
-                                                      icon: 'success',
-                                                      title: 'Item Added Successfully To Cart',
-                                                      showConfirmButton: false,
-                                                      timer: 2000
-                                                    })">
-                                                      Add to Cart
-                                                    </button>
-                                          
-                                                 <% }else{%>
-                                                  <a href="/cart">
-                                                 <button aria-label="View Cart" class="btn btn-sm ">View Cart</button></a>
-                                                 <% }%>
-                                                  
+                                                <button type="submit" onclick="addToCart('<%= data._id %>'); Swal.fire({
+                                                    position: 'center',
+                                                    icon: 'success',
+                                                    title: 'Item Added Successfully To Cart',
+                                                    showConfirmButton: false,
+                                                    timer: 2000
+                                                })"  class="button button-add-to-cart bg-dark">Add to cart</button>
                                             <!-- <a aria-label="Add To Wishlist" class="action-btn hover-up" href="shop-wishlist.html"><i class="fi-rs-heart"></i></a>
                                                 <a aria-label="Compare" class="action-btn hover-up" href="shop-compare.html"><i class="fi-rs-shuffle"></i></a> -->
                                             </div>
