add more changes to ordercontroller total amount

--- a/views/user/orderDetails.ejs
+++ b/views/user/orderDetails.ejs
@@ -111,7 +111,7 @@
           <div class="card-footer border-0 px-4 py-5"
             style="background-color: whitesmoke; border-bottom-left-radius: 10px; border-bottom-right-radius: 10px;">
             <h5 class="d-flex align-items-center justify-content-end text-black text-uppercase mb-0">Total
-              paid: ₹<%=total%><span class="h2 mb-0 ms-2"></span></h5>
+              paid: ₹<%=orderDetails.total%><span class="h2 mb-0 ms-2"></span></h5>
           </div>
         </div>
       </div>
