add tocart change to view cart

--- a/views/user/view-orders.ejs
+++ b/views/user/view-orders.ejs
@@ -77,6 +77,7 @@ body {
    </style>
 <% }else { %>
 
+  <section class="main-wrap">
 
   <div class="container text-center">
     <div class="table-responsive justify-content-center">
@@ -122,6 +123,7 @@ body {
   </div>
 
 <% } %>
+
 <div class="mobile-header-active mobile-header-wrapper-style">
   <div class="mobile-header-wrapper-inner">
     <div class="mobile-header-top">
@@ -166,6 +168,7 @@ body {
   </div>
  </div>
 </div>
+</section>
 <script>
   function cancelOrder(proId){
       $.ajax({
